[M70]Allow microphone streams with weird sample rates.

Sample rates not divisible by 100 still won't be allowed to use the APM
in audio service, but this change allows stream that don't use audio
processing, as well as streams that use audio processing in the renderer.

Bug: 884482
Change-Id: I80a87bdf5c7ae2daf48592ce96994a3203212383
Reviewed-on: https://chromium-review.googlesource.com/1242943
Reviewed-by: Oskar Sundbom <ossu@chromium.org>
Commit-Queue: Max Morin <maxmorin@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#593878}(cherry picked from commit bce22ded960d2f6abe828bd5821960c9998f0197 [formerly 68e385c21955cafed05305d779d2b2fa2edb4eab])
Reviewed-on: https://chromium-review.googlesource.com/1251044
Reviewed-by: Max Morin <maxmorin@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#729}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: e1fdac95a6e2f73512325e9c3433d4aa68232427